chore:fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,12 @@
   list-style: none;
   text-decoration: none;
 }
-
+body,
+html,
+.app {
+  height: 100%;
+  width: 100%;
+}
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
